--- a/client/partials/groups.html
+++ b/client/partials/groups.html
@@ -1,3 +1,17 @@
-<div ng:controller="groupsController">
+<div ng:controller="groupsController as grpCtrl">
 	<h1>Hello food groups</h1>
+	<h1>Create a group</h1>
+	<p>
+		<input type="text" ng:model="grpCtrl.newGroup.name" placeholder="name">
+	</p>
+	<textarea ng:model="grpCtrl.newGroup.content"></textarea>
+	<p>
+		<input type="submit" ng:click="grpCtrl.addGroup()">
+	</p>
+	<ul>
+		<li ng:repeat="group in grpCtrl.allGroups">
+			<a href="#/group/{{group.id}}"><h1 ng:bind="group.name"></h1></a>
+			<p ng:bind="group.content"></p>
+		</li>
+	</ul>
 </div>
